; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_psp.c_frontend_psp_parse_drive_list.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_psp.c_frontend_psp_parse_drive_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR = common dso_local global i32 0, align 4
@MSG_UNKNOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"ms0:/\00", align 1
@FILE_TYPE_DIRECTORY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"ef0:/\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"host0:/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @frontend_psp_parse_drive_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @frontend_psp_parse_drive_list(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to i32*
  store i32* %8, i32** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR, align 4
  br label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @MSG_UNKNOWN, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = phi i32 [ %12, %11 ], [ %14, %13 ]
  store i32 %16, i32* %6, align 4
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR, align 4
  %19 = call i32 @msg_hash_to_str(i32 %18)
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @FILE_TYPE_DIRECTORY, align 4
  %22 = call i32 @menu_entries_append_enum(i32* %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %20, i32 %21, i32 0, i32 0)
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* @MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR, align 4
  %25 = call i32 @msg_hash_to_str(i32 %24)
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @FILE_TYPE_DIRECTORY, align 4
  %28 = call i32 @menu_entries_append_enum(i32* %23, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %25, i32 %26, i32 %27, i32 0, i32 0)
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* @MENU_ENUM_LABEL_FILE_DETECT_CORE_LIST_PUSH_DIR, align 4
  %31 = call i32 @msg_hash_to_str(i32 %30)
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* @FILE_TYPE_DIRECTORY, align 4
  %34 = call i32 @menu_entries_append_enum(i32* %29, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i32 %31, i32 %32, i32 %33, i32 0, i32 0)
  ret i32 0
}

declare dso_local i32 @menu_entries_append_enum(i32*, i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
